[package]
name = "ovh-dynhost"
version = "0.1.0"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gip = "0.6.0"
tokio = { version = "0.2.18", features = ["rt-threaded", "macros", "time"] }
reqwest = "0.10.4"
log = "0.4.8"
custom_error = "1.7.1"
clap = "2.33.0"
fern = "0.6.0"
chrono = "0.4.11"
toml = "0.5.6"
serde = { version = "1.0.106", features = ["derive"] }
